--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,13 +34,14 @@ body main h1{
 /* -------------- */
 nav ul {
     list-style-type: none;
-    margin: 0; 
+    margin-bottom: 0.5%; 
     padding: 0;
     overflow: hidden;
     background-color: white;
     border-bottom: 2px solid #888;
     border-top: 3px solid #111;
     width: 100%;
+
   }
   
 nav li:not(.logged_in) {
